--- a/productivity-chatbot/src/components/ChatBotPage.css
+++ b/productivity-chatbot/src/components/ChatBotPage.css
@@ -41,8 +41,13 @@
   display: flex;
   flex-direction: column;
   background-color: white;
-  border: 2px solid rgb(9 9 59);
- }
+
+  /* Remove hard border */
+  border: none;
+
+  /* Add soft shadow instead */
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.15); 
+}
 
 .chat-header {
   display: flex;
